--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,4 +36,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
           - { path: ^/admin, roles: ROLE_ADMIN }
-          - { path: ^/hotel_desc, roles: ROLE_USER }
+          #- { path: ^/hotel_desc, roles: ROLE_USER }
