--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -8,3 +8,8 @@ vich_uploader:
         hotel_images:
             uri_prefix: '%app.path.hotel_images%'
             upload_destination: '%kernel.project_dir%/public%app.path.hotel_images%'
+        hotel_gallery:
+            uri_prefix: '/images/hotel/gallery'
+            upload_destination: '%kernel.project_dir%/public/images/hotel/gallery'
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
+
