--- a/.env
+++ b/.env
@@ -29,6 +29,6 @@ APP_SECRET=f1dfd8d55b05ca44b7fa51c07ebb6121
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 # 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:root@symfony_mysql:3306/hotel?serverVersion=10.4.12-MariaDB"
+ DATABASE_URL="mysql://root:password@symfony_mysql:3306/hotel?serverVersion=10.4.12-MariaDB"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
